# modelbar

./: .dockerignore  .gitignore  Dockerfile  README.md  modelbar.py  pyproject.toml
.github/workflows/: publish.yml
