[project]
name = "modelbar"
version = "0.1.0"
description = "HuggingFace-to-OCI registry proxy for Kubernetes image volumes"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "huggingface-hub>=1.21.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
modelbar = "modelbar:main"
